--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "idb": "^6.1.5",
         "regenerator-runtime": "^0.13.9",
-        "serviceworker-webpack-plugin": "^1.0.1"
+        "serviceworker-webpack-plugin": "^1.0.1",
+        "sweetalert2": "^11.1.10"
     }
 }
