--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,18 @@
 		"import/no-extraneous-dependencies": "off",
 		"no-console": "off",
 		"no-underscore-dangle": "off",
-		"no-unused-vars": "off"
+		"no-unused-vars": "off",
+		"arrow-body-style": "off",
+		"dot-notation": "off",
+		"no-shadow": "off",
+		"array-callback-return": "off",
+		"prefer-destructuring": "off",
+		"operator-linebreak": "off",
+		"no-restricted-globals": "off",
+		"import/order": "off",
+		"comma-dangle": "off",
+		"func-names": "off",
+		"no-var": "off"
 	},
 	"parser": "@babel/eslint-parser"
 }
