--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "author": "Rolando Pranata",
     "license": "MIT",
     "devDependencies": {
-        "@babel/core": "^7.10.5",
+        "@babel/cli": "^7.16.0",
+        "@babel/core": "^7.16.0",
+        "@babel/eslint-parser": "^7.16.3",
         "@babel/preset-env": "^7.10.4",
         "babel-loader": "^8.1.0",
         "copy-webpack-plugin": "^6.4.1",
