feat: add offline handler, link See all, and load page from top feature

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "idb": "^6.1.5",
+        "lit": "^2.0.2",
         "regenerator-runtime": "^0.13.9",
         "sweetalert2": "^11.1.10",
         "workbox-core": "^6.0.2",
