--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
 		"import/order": "off",
 		"comma-dangle": "off",
 		"func-names": "off",
-		"no-var": "off"
+		"no-var": "off",
+		"class-methods-use-this": "off"
 	},
 	"parser": "@babel/eslint-parser"
 }
