--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "dev": "webpack-dev-server --config webpack.dev.js",
-        "build": "webpack --config webpack.prod.js"
+        "build": "webpack --config webpack.prod.js",
+        "test": "karma start"
     },
     "author": "Rolando Pranata",
     "license": "MIT",
@@ -21,6 +22,10 @@
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.25.2",
         "html-webpack-plugin": "^4.5.2",
+        "jasmine-core": "^3.10.1",
+        "karma": "^6.3.9",
+        "karma-chrome-launcher": "^3.1.0",
+        "karma-jasmine": "^4.0.1",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12",
@@ -33,6 +38,7 @@
         "aos": "^2.3.4",
         "file-loader": "^6.2.0",
         "idb": "^6.1.5",
+        "lazysizes": "^5.3.2",
         "lit": "^2.0.2",
         "regenerator-runtime": "^0.13.9",
         "sweetalert2": "^11.1.10",
