add: create integration testing for like and unlike button, and redesign food card

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,5 +34,6 @@
 		"consistent-return": "off",
 		"no-return-assign": "off"
 	},
-	"parser": "@babel/eslint-parser"
+	"parser": "@babel/eslint-parser",
+	"plugins": ["jasmine", "codeceptjs"]
 }
