--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "eslint-plugin-import": "^2.25.2",
         "html-webpack-plugin": "^4.5.2",
         "jasmine-core": "^3.10.1",
-        "karma": "^6.3.9",
+        "karma": "^5.1.0",
         "karma-chrome-launcher": "^3.1.0",
-        "karma-jasmine": "^4.0.1",
+        "karma-jasmine": "^3.3.1",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-webpack": "^4.0.2",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12",
