--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "webpack-dev-server --config webpack.dev.js",
         "build": "webpack --config webpack.prod.js",
-        "test": "karma start"
+        "test": "karma start",
+        "e2e": "codeceptjs run --steps"
     },
     "author": "Rolando Pranata",
     "license": "MIT",
@@ -16,6 +17,7 @@
         "@babel/eslint-parser": "^7.16.3",
         "@babel/preset-env": "^7.10.4",
         "babel-loader": "^8.1.0",
+        "codeceptjs": "^3.2.2",
         "copy-webpack-plugin": "^6.4.1",
         "css-loader": "^3.6.0",
         "eslint": "^7.32.0",
@@ -28,6 +30,7 @@
         "karma-jasmine": "^3.3.1",
         "karma-sourcemap-loader": "^0.3.7",
         "karma-webpack": "^4.0.2",
+        "puppeteer": "^12.0.1",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12",
