--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Bites is the website of a restaurant called Bites which is very famous in Indonesia",
     "main": "index.js",
     "scripts": {
-        "dev": "webpack-dev-server --config webpack.dev.js --watch",
+        "dev": "webpack-dev-server --config webpack.dev.js",
         "build": "webpack --config webpack.prod.js",
         "test": "karma start",
         "e2e": "codeceptjs run --steps"
@@ -34,6 +34,7 @@
         "puppeteer": "^12.0.1",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
+        "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^5.0.9",
@@ -41,13 +42,11 @@
         "workbox-webpack-plugin": "^6.3.0"
     },
     "dependencies": {
-        "aos": "^2.3.4",
         "file-loader": "^6.2.0",
         "idb": "^6.1.5",
         "lazysizes": "^5.3.2",
-        "lit": "^2.0.2",
         "regenerator-runtime": "^0.13.9",
-        "sweetalert2": "^11.1.10",
+        "sweetalert2": "^11.2.2",
         "url-loader": "^4.1.1",
         "workbox-core": "^6.0.2",
         "workbox-expiration": "^6.0.2",
