--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "css-loader": "^3.6.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-codeceptjs": "^1.3.0",
         "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-jasmine": "^4.1.3",
         "html-webpack-plugin": "^4.5.2",
         "imagemin-webp-webpack-plugin": "^3.3.6",
         "jasmine-core": "^3.10.1",
